// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<GameForm /> should match snapshot for other games 1`] = `
<Modal
  basic={true}
  closeOnDimmerClick={true}
  closeOnDocumentClick={false}
  dimmer={true}
  eventPool="Modal"
  onClose={[Function]}
  onOpen={[Function]}
  open={false}
  size="small"
  trigger={
    <Button
      as="button"
      fluid={true}
      primary={false}
    >
      Start
    </Button>
  }
>
  <Header
    content="Select Teams"
    icon="soccer"
  />
  <TeamSearch
    closeModal={[Function]}
    getCompetitions={[Function]}
    getTeams={[Function]}
  />
</Modal>
`;

exports[`<GameForm /> should match snapshot for started games 1`] = `
<Modal
  basic={true}
  closeOnDimmerClick={true}
  closeOnDocumentClick={false}
  dimmer={true}
  eventPool="Modal"
  onClose={[Function]}
  onOpen={[Function]}
  open={false}
  size="small"
  trigger={
    <Button
      as="button"
      fluid={true}
      primary={true}
    >
      Complete Game
    </Button>
  }
>
  <Header
    content="Complete Game"
    icon="soccer"
  />
  <FinishGame
    closeModal={[Function]}
    imageFetcher={[Function]}
  />
</Modal>
`;
